--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 cwltool (1.0.20160203221531-1) UNRELEASED; urgency=medium
 
-  * Initial release. (Closes: #XXXXXX)
+  * Initial release. (Closes: #814000)
 
  -- Michael R. Crusoe <crusoe@ucdavis.edu>  Fri, 05 Feb 2016 02:18:38 -0800
