--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,7 @@ cwltool (1.0.20160203221531-1) UNRELEASED; urgency=medium
 
   * Initial release. (Closes: #814000)
 
- -- Michael R. Crusoe <crusoe@ucdavis.edu>  Fri, 05 Feb 2016 02:18:38 -0800
+  [Steffen Moeller]
+  * Added help2man-generated man pages.
+
+ -- Michael R. Crusoe <crusoe@ucdavis.edu>  Mon, 22 Feb 2016 21:22:21 +0100
