--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ cwltool (1.0.20161207161158-1) UNRELEASED; urgency=medium
   [ Andreas Tille ]
   * Add missing Build-Depends: python-keepalive
   * d/watch: version=4
+  * debhelper 10
 
  -- Andreas Tille <tille@debian.org>  Fri, 09 Dec 2016 10:26:39 +0100
 
