Add python-typing as Build-Depends and comment patch to skip it

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ cwltool (1.0.20161207161158-1) UNRELEASED; urgency=medium
     Closes: #845982
   * d/watch: version=4
   * debhelper 10
+  * Add python-typing as Build-Depends and comment patch to skip it
 
  -- Andreas Tille <tille@debian.org>  Fri, 09 Dec 2016 10:33:42 +0100
 
