--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ cwltool (1.0.20161207161158-1) UNRELEASED; urgency=medium
   * Add python-typing as Build-Depends and comment patch to skip it
   * Do not try to create manpage for removed tool cwltest
   * Remove empty template for upstream metadata
+  * Add Build-Depends: python-ruamel.yaml (>=0.12.4)
 
  -- Andreas Tille <tille@debian.org>  Fri, 09 Dec 2016 11:12:23 +0100
 
