--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cwltool (1.0.20170114120503-1) unstable; urgency=medium
+
+  * Team upload.
+  * New upstream release.
+
+ -- Sascha Steinbiss <satta@debian.org>  Sat, 14 Jan 2017 12:49:30 +0000
+
 cwltool (1.0.20170111193653-1) unstable; urgency=medium
 
   * Team upload
