--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 cwltool (1.0.20170114120503-2) UNRELEASED; urgency=medium
 
+  [ Steffen Moeller ]
   * debian/upstream/metadata: Added refs to registry databases,
     to RRID SCR_015528 in particular
+
+  [ Sascha Steinbiss ]
+  * Relax version requirement for python-typing.
 
  -- Steffen Moeller <moeller@debian.org>  Thu, 03 Aug 2017 16:08:37 +0200
 
