--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ cwltool (1.0.20170114120503-2) UNRELEASED; urgency=medium
     to RRID SCR_015528 in particular
 
   [ Sascha Steinbiss ]
+  * Add missing build-dep on python-avro.
   * Relax version requirement for python-typing.
 
  -- Steffen Moeller <moeller@debian.org>  Thu, 03 Aug 2017 16:08:37 +0200
