--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-cwltool (1.0.20170803160545-1) UNRELEASED; urgency=medium
+cwltool (1.0.20170810192106-1) unstable; urgency=medium
 
   [ Steffen Moeller ]
   * debian/upstream/metadata: Added refs to registry databases,
@@ -12,7 +12,7 @@ cwltool (1.0.20170803160545-1) UNRELEASED; urgency=medium
   [ Michael R. Crusoe ]
   * New upstream release.
 
- -- Michael R. Crusoe <michael.crusoe@gmail.com>  Fri, 04 Aug 2017 05:03:10 -0700
+ -- Michael R. Crusoe <michael.crusoe@gmail.com>  Fri, 11 Aug 2017 05:05:36 -0700
 
 cwltool (1.0.20170114120503-1) unstable; urgency=medium
 
