--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,17 @@
-cwltool (1.0.20170810192106-2) UNRELEASED; urgency=medium
+cwltool (1.0.20170810192106-2) unstable; urgency=medium
+
+  * Team upload
 
   [ Andreas Tille ]
   * d/upstream/metadata: Fix Syntax
+  * Standards-Version: 4.1.0
+  * This version has no restriction on python-typing version any more
+    Closes: #868614
 
   [ Fabian Klötzl ]
   * d/upstream/metadata: Fix Bug-Submit URL (closes: #874355)
 
- -- Fabian Klötzl <kloetzl@evolbio.mpg.de>  Tue, 12 Sep 2017 14:59:51 +0200
+ -- Fabian Klötzl <kloetzl@evolbio.mpg.de>  Wed, 20 Sep 2017 12:10:17 +0200
 
 cwltool (1.0.20170810192106-1) unstable; urgency=medium
 
